--- a/.github/workflows/python-lint.yml
+++ b/.github/workflows/python-lint.yml
@@ -14,4 +14,4 @@ jobs:
       - name: Install flake8
         run: pip install flake8
       - name: Run flake8
-        run: flake8 --ignore=E501,W503 --exclude=.git,__pycache__,build,dist
+        run: flake8 --ignore=E501,W503,F821 --exclude=.git,__pycache__,build,dist
