--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -1,10 +1,11 @@
-name: Python Lint
+name: Lint
 
 on: [push, pull_request, workflow_dispatch]
 
 jobs:
   lint:
     runs-on: ubuntu-latest
+    if: github.ref_type == 'branch'
     steps:
       - uses: actions/checkout@v3
       - name: Set up Python
