--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -7,7 +7,7 @@ on:
   workflow_dispatch:
 
 jobs:
-  build-and-release:
+  release:
     runs-on: ubuntu-latest
     env:
       release_version: ${{ github.ref_name }}
