--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -16,3 +16,11 @@ jobs:
         run: pip install flake8
       - name: Run flake8
         run: flake8 --ignore=E501,W503,F821 --exclude=.git,__pycache__,build,dist
+      - name: Install Pylint
+        run: pip install pylint
+      - name: Run Pylint
+        run: pylint $(git ls-files '*.py')
+      - name: Install Ruff
+        run: pip install ruff
+      - name: Run Ruff
+        run: ruff check .
