--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -4,6 +4,8 @@ on:
   push:
     tags:
       - '*'
+    branches:
+      - master
   workflow_dispatch:
 
 jobs:
@@ -11,6 +13,7 @@ jobs:
     runs-on: ubuntu-latest
     env:
       release_version: ${{ github.ref_name }}
+      ref_type: ${{ github.ref_type }}
 
     steps:
       - name: Checkout repository
@@ -22,33 +25,26 @@ jobs:
           sudo apt install -y fakeroot dpkg tar gzip xz-utils
 
           # Prepare control file
-          sed "s/^Version: .*/Version: ${release_version}/" CONTROL/control > control
-
-          # Create postinst file
-          cat <<'EOF' > postinst
-          #!/bin/sh
-          set -e
-
-          if [ ! -x /usr/bin/multiboot-selector.sh ]; then
-            echo "WARNING: '/usr/bin/multiboot-selector.sh' does not exist or is not executable."
-            echo ""
-            echo "This file is a prerequisite for the MultiBoot Selector plugin to function."
-            echo "Please ensure that the 'multiboot-selector.sh' script is installed in /usr/bin"
-            echo "and is executable. Without it, this plugin will not work as intended."
+          if [ "${ref_type}" != "tag" ]; then
+            release_version="$(awk -F'"' '/^PV *=/ {print $2}' src/__init__.py)-pre"
+            echo "release_version=${release_version}" >> $GITHUB_ENV
           fi
+          sed -i "s/^Version: .*/Version: ${release_version}/" CONTROL/control
+          sed -i "s/^\(PV *= *\).*/\1\"${release_version}\"/" src/__init__.py
 
-          exit 0
-          EOF
-          chmod 755 postinst
+          # multiboot-selector.sh must be executable
+          chmod +x src/usr/bin/multiboot-selector.sh
 
       # Build .deb package
       - name: Build .deb package
         run: |
           mkdir -p deb_pkg/DEBIAN
+          mkdir -p deb_pkg/usr/bin
           mkdir -p deb_pkg/usr/lib/enigma2/python/Plugins/Extensions/MultiBootSelector
 
           # Add files to publish
-          cp control postinst deb_pkg/DEBIAN/
+          cp CONTROL/control deb_pkg/DEBIAN/
+          cp src/usr/bin/multiboot-selector.sh deb_pkg/usr/bin/
           cp src/*.py src/*.png deb_pkg/usr/lib/enigma2/python/Plugins/Extensions/MultiBootSelector/
 
           # Create deb package
@@ -58,10 +54,12 @@ jobs:
       - name: Build .ipk package
         run: |
           mkdir -p ipk_pkg/control
+          mkdir -p ipk_pkg/usr/bin
           mkdir -p ipk_pkg/usr/lib/enigma2/python/Plugins/Extensions/MultiBootSelector
 
           # Add files to publish
-          cp control postinst ipk_pkg/control/
+          cp CONTROL/control ipk_pkg/control/
+          cp src/usr/bin/multiboot-selector.sh ipk_pkg/usr/bin/
           cp src/*.py src/*.png ipk_pkg/usr/lib/enigma2/python/Plugins/Extensions/MultiBootSelector/
 
           # Create ipk package
@@ -77,6 +75,7 @@ jobs:
       # ✅ Create GitHub Release with auto-generated release notes
       # =============================
       - name: Create GitHub Release
+        if: github.ref_type == 'tag'
         uses: softprops/action-gh-release@v2
         with:
           files: |
@@ -85,3 +84,19 @@ jobs:
           generate_release_notes: true
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+
+      # =============================
+      # ✅ Create GitHub artifacts for testing
+      # =============================
+      - name: Upload build artifacts
+        if: github.ref_type != 'tag' || !github.ref_type
+        uses: actions/upload-artifact@v4
+        with:
+          name: packages_${{ env.release_version }}
+          retention-days: 1
+          compression-level: 9
+          path: |
+            enigma2-plugin-extensions-multibootselector_*_all.deb
+            enigma2-plugin-extensions-multibootselector_*_all.ipk
+
+
