--- a/CONTROL/control
+++ b/CONTROL/control
@@ -8,3 +8,6 @@ Maintainer: OE-Alliance Team
 License: GPL-3.0
 Homepage: www.opena.tv
 Source: https://github.com/oe-alliance/MultiBootSelectorPlugin
+Depends: bash
+Replaces: multiboot-selector
+Conflicts: multiboot-selector
