add plugin update
* download and install latest plugin version from github project page via blue button
* rename yellow button to 'More'
* some code optimization

--- a/CONTROL/control
+++ b/CONTROL/control
@@ -6,7 +6,7 @@ Section: extra
 Priority: optional
 Maintainer: OE-Alliance Team
 License: GPL-3.0
-Homepage: www.opena.tv
+Homepage: https://www.opena.tv
 Source: https://github.com/oe-alliance/MultiBootSelectorPlugin
 Depends: bash
 Replaces: multiboot-selector
