--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -1,29 +1,60 @@
-name: Lint
+name: Lint checks
 
 on: [push, pull_request, workflow_dispatch]
 
 jobs:
-  lint:
+  lint_python_versions:
+    if: github.ref_type == 'branch'
+    runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        python:
+          - "2.7"
+          - "3.8"
+          - "latest"
+        include:
+          - python: "2.7"
+            image: python:2.7
+          - python: "3.8"
+            image: python:3.8
+          - python: "latest"
+            image: python:latest
+    container:
+      image: ${{ matrix.image }}
+    steps:
+      - uses: actions/checkout@v3
+
+      - name: Show python version
+        run: |
+            echo "Using Python from: $(which python)"
+            python --version
+            pip install --upgrade pip
+
+      - name: Avoid suspicious ownership errors
+        run: git config --global --add safe.directory /__w/MultiBootSelectorPlugin/MultiBootSelectorPlugin
+
+      - name: Install flake8
+        run: pip install flake8
+      - name: Run flake8
+        run: flake8 --verbose --statistics --count --show-source $(git ls-files '*.py')
+
+      - name: Install Pylint
+        run: pip install pylint
+      - name: Run Pylint
+        run: pylint --reports=y --output-format=colorized $(git ls-files '*.py')
+
+      - name: Install Ruff (only for Python 3.x)
+        if: matrix.python != '2.7'
+        run: pip install ruff
+      - name: Run Ruff
+        if: matrix.python != '2.7'
+        run: ruff check --output-format=github --show-files --show-fixes .
+
+  lint_shell_scripts:
     runs-on: ubuntu-latest
     if: github.ref_type == 'branch'
     steps:
       - uses: actions/checkout@v3
-      - name: Set up Python
-        uses: actions/setup-python@v4
-        with:
-          python-version: '3.x'
-      - name: Install flake8
-        run: pip install flake8
-      - name: Run flake8
-        run: flake8 --ignore=E501,W503,F821 --exclude=.git,__pycache__,build,dist
-      - name: Install Pylint
-        run: pip install pylint
-      - name: Run Pylint
-        run: pylint $(git ls-files '*.py')
-      - name: Install Ruff
-        run: pip install ruff
-      - name: Run Ruff
-        run: ruff check .
       - name: Run ShellCheck
         uses: ludeeus/action-shellcheck@master
         env:
